--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           $env:Path += ";C:\Program Files\Tailscale\"
           Write-Host "Tailscale installed successfully."
 
-      - name: Connect to Tailscale Network
+            - name: Connect to Tailscale Network
         env:
           TAILSCALE_AUTH_KEY: ${{ secrets.TAILSCALE_AUTH_KEY }}
         run: |
@@ -47,8 +47,9 @@ jobs:
           & "C:\Program Files\Tailscale\tailscale.exe" up `
             --authkey $env:TAILSCALE_AUTH_KEY `
             --hostname "github-rdp" `
-            --accept-routes --ssh
+            --accept-routes
           Write-Host "Connected to Tailscale network successfully."
+
 
       - name: Show Tailscale IP
         run: |
