--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: ✅ RDP + Tailscale Setup (v2 Fixed)
+name: ✅ RDP + Tailscale Setup (v3 Final)
 
 on:
   workflow_dispatch:
@@ -65,8 +65,8 @@ jobs:
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           Write-Host "✅ Remote Desktop enabled & firewall rule set."
 
-      # ------------------------------------------------------
-      # 3️⃣ Install and Connect Tailscale (fixed download)
+      # -------------------------------------------------------
+      # 3️⃣ Install and Connect Tailscale (Fixed local MSI install)
       # -------------------------------------------------------
       - name: Install and Connect to Tailscale
         shell: pwsh
@@ -76,25 +76,29 @@ jobs:
           Write-Host "📦 Downloading Tailscale MSI..."
           $tailscaleUrl = "https://pkgs.tailscale.com/stable/tailscale-setup-latest.msi"
           $installer = "$env:TEMP\tailscale.msi"
-          Invoke-WebRequest -Uri $tailscaleUrl -OutFile $installer
+
+          # Download to temp path
+          Invoke-WebRequest -Uri $tailscaleUrl -OutFile $installer -UseBasicParsing
+          if (-Not (Test-Path $installer)) {
+            throw "Tailscale installer not downloaded properly!"
+          }
 
           Write-Host "📦 Installing Tailscale..."
           Start-Process -FilePath "msiexec.exe" -ArgumentList "/i `"$installer`" /qn" -Wait -NoNewWindow
 
-          # Wait a moment to ensure service starts
+          Write-Host "⏳ Waiting for Tailscale service to initialize..."
           Start-Sleep -Seconds 5
 
-          Write-Host "🔗 Connecting to Tailscale..."
           $tailscaleExe = "C:\Program Files\Tailscale\tailscale.exe"
           if (-Not (Test-Path $tailscaleExe)) {
-            throw "Tailscale executable not found at expected path: $tailscaleExe"
+            throw "❌ tailscale.exe not found! Installation failed."
           }
 
+          Write-Host "🔗 Connecting to Tailscale..."
           & $tailscaleExe up --authkey $env:TAILSCALE_AUTHKEY --hostname GitHubRDP --accept-routes
 
           Write-Host "🌐 Checking Tailscale status..."
           & $tailscaleExe status
-
 
       # -------------------------------------------------------
       # 4️⃣ Show Access Info
